Fixed all Sonar Code Smells --> White Space, Making for duplicates Constants, Extra Semicolons, Duplicated Selectors that overwrite the other one

--- a/src/assets/css/martian/login-register.css
+++ b/src/assets/css/martian/login-register.css
@@ -72,7 +72,7 @@ form input[value] {
     letter-spacing: 0.15em;
     cursor: pointer;
     color: var(--background);
-    box-shadow: 1px var(--accent);;
+    box-shadow: 1px var(--accent);
     transition: transform 250ms ease-in-out;
 }
 
